tests/test2/fail/fail-trace.m2
int main() {
  matrix int [3][1] m;
  m = [[2];
      [0];
      [1]];

  printStr("Trace of m");
  printInt(m:trace);
  printStr("");

  return 0;
}

